--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
+    "react-simple-star-rating": "^5.1.7",
     "sonner": "^1.3.1",
     "swiper": "^11.0.5"
   },
